src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 7% 85.1%;
    --foreground: 240 2.44% 8.04%;
    --primary: 0 0% 9%;
    --primary-foreground: 0 0% 98%;
    --secondary: 0 0% 80.1%;
    --secondary-foreground: 0 0% 9%;
    --muted: 0 0% 80.1%;
    --muted-foreground: 0 0% 45.1%;
    --accent: 0 0% 80.1%;
    --accent-foreground: 0 0% 9%;
    --additive: 112 50% 36%;
    --additive-foreground: 0 0% 9%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 89.8%;
    --ring: 0 0% 3.9%;
  }
  
  .dark {
    --background: 0 0% 3.9%;
    --foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;
    --secondary: 0 0% 14.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 0 0% 14.9%;
    --muted-foreground: 0 0% 63.9%;
    --accent: 0 0% 14.9%;
    --accent-foreground: 0 0% 98%;
    --additive: 112 50% 36%;
    --additive-foreground: 0 0% 9%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 14.9%;
    --ring: 0 0% 83.1%;
  }

  *,
  *::before,
  *::after {
    @apply border-border;
  }

  html {
    color-scheme: light;
    @apply bg-background text-foreground;

    &.dark {
      color-scheme: dark;
    }

    ::-webkit-scrollbar-corner {
      @apply bg-transparent;
    }
  }

  .grid {
    @apply fixed inset-0 -z-10 h-full w-full bg-background bg-[linear-gradient(to_right,hsl(var(--border))_1px,transparent_1px),linear-gradient(to_bottom,hsl(var(--border))_1px,transparent_1px)] bg-[size:2rem_2rem];
  }

  .notch {
    @apply fixed bottom-0 left-0 right-0 h-[20vh] z-[-1]
       bg-[radial-gradient(100%_50%_at_50%_100%,hsl(var(--primary)/0.16)_0%,hsl(var(--primary)/0)_50%,hsl(var(--primary)/0)_100%)];
  }

  html.dark .notch {
    @apply top-0 bottom-auto z-[-1]
      bg-[radial-gradient(100%_50%_at_50%_0%,hsl(var(--primary)/0.16)_0%,hsl(var(--primary)/0)_50%,hsl(var(--primary)/0)_100%)];
  }

  header {
    @apply relative lg:sticky top-0 z-0 flex items-center justify-between py-2 lg:py-4;
  }

  html.dark .astro-code,
  html.dark .astro-code span {
    color: var(--shiki-dark) !important;
    background-color: var(--shiki-dark-bg) !important;
    /* Optional, if you also want font styles */
    font-style: var(--shiki-dark-font-style) !important;
    font-weight: var(--shiki-dark-font-weight) !important;
    text-decoration: var(--shiki-dark-text-decoration) !important;
  }

  .astro-code .line-number {
    display: inline-block;
    width: 2rem;
    text-align: right;
    margin-right: 1rem;
    color: var(--shiki-dark-muted); /* Use a muted color for line numbers */
    user-select: none; /* Prevent selection of line numbers */
  }
  
  .disable-transitions,
  .disable-transitions * {
    @apply !transition-none;
  }
}

@layer components {
  article {
    @apply prose-headings:!text-foreground prose-headings:scroll-mt-20 prose-headings:break-words first:prose-headings:mt-0 prose-p:break-words prose-a:!break-words prose-a:!decoration-muted-foreground prose-a:underline-offset-[3px] prose-a:transition-colors hover:prose-a:!decoration-foreground prose-pre:!px-0 prose-img:mx-auto relative rounded-lg shadow-sm bg-background !text-muted-foreground;

    h1 {
      @apply text-4xl font-bold leading-tight gap-y-6 text-left;
    }

    .theme-toggle {
      @apply w-32 h-32;
    }

    /* Removes background from <mark> elements */
    mark {
      @apply bg-transparent;
    }

    /* Inline code */
    :not(pre) > code {
      @apply relative rounded bg-muted/50 px-[0.3rem] py-[0.2rem] font-mono text-sm font-medium !text-foreground;
    }


    /* Global table styles */
    table {
      @apply min-w-full table-auto border-collapse border border-muted;
    }

    th, td {
      @apply !px-4 !py-2 border-b-2 text-sm border-muted;
    }

    thead {
      @apply bg-muted text-left;
    }

    th {
      @apply font-medium text-muted-foreground;
    }

    tbody tr:hover {
      @apply bg-accent text-accent-foreground;
    }

    td {
      @apply text-foreground;
    }

    hr {
      @apply !border-t-2 !border-muted !my-4;
    }
  }
}

